# kde-l10n-de-4.13.0

./: CMakeLists.txt
docs/: CMakeLists.txt
docs/applications/: CMakeLists.txt
docs/common/: CMakeLists.txt
docs/kde-runtime/: CMakeLists.txt
docs/kde-workspace/: CMakeLists.txt
docs/kdeaccessibility/: CMakeLists.txt
docs/kdeadmin/: CMakeLists.txt
docs/kdeedu/: CMakeLists.txt
docs/kdegames/: CMakeLists.txt
docs/kdegraphics/: CMakeLists.txt
docs/kdelibs/: CMakeLists.txt
docs/kdemultimedia/: CMakeLists.txt
docs/kdenetwork/: CMakeLists.txt
docs/kdepim/: CMakeLists.txt
docs/kdepimlibs/: CMakeLists.txt
docs/kdesdk/: CMakeLists.txt
docs/kdetoys/: CMakeLists.txt
docs/kdeutils/: CMakeLists.txt
docs/kdewebdev/: CMakeLists.txt
messages/: CMakeLists.txt
messages/akonadi-ldap-resource/: akonadi_ldap_resource.po
messages/applications/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  desktop_applications_kde-baseapps.po  dirfilterplugin.po  dolphin.appdata.po  dolphin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  kate-ctags-plugin.po  kate.po  kate_kttsd.po  katebacktracebrowserplugin.po  katebuild-plugin.po  katecloseexceptplugin.po  katefilebrowserplugin.po  katefiletemplates.po  kategdbplugin.po  katehelloworld.po  katekonsoleplugin.po  katemailfilesplugin.po  kateopenheader.po  katepart4.po  kateproject.po  katesearch.po  katesnippetsplugin.po  katesql.po  katesymbolviewer.po  katetabbarextension.po  katetabifyplugin.po  katetextfilter.po  katexmlcheck.po  katexmltools.po  kcmkio.po  kcmkonq.po  kcmkonqhtml.po  kcmkurifilt.po  kcmperformance.po  (+27 more)
messages/baloo/: akonadi_baloo_indexer.po  baloo_file.po  baloo_file_extractor.po  baloosearch.po  balooshow.po  kcm_baloofile.po  kio_baloosearch.po  kio_tags.po  kio_timeline.po  plasma_runner_baloosearchrunner.po
messages/calligra/: ArtisticTextShape.po  AutocorrectPlugin.po  CalendarTool.po  ChangecasePlugin.po  ChartShape.po  CommentShape.po  FormulaShape.po  KarbonTools.po  KexiRelationDesignShapePlugin.po  MusicShape.po  PathShapes.po  PictureShape.po  PluginShape.po  SpellCheckPlugin.po  TableShape.po  TemplateShape.po  TextShape.po  ThreedShape.po  VariablesPlugin.po  VectorShape.po  VideoShape.po  braindump.po  calligra-defaulttools.po  calligra-dockers.po  calligra-opener.po  calligra.po  calligra_semanticitem_contact.po  calligra_semanticitem_event.po  calligra_semanticitem_location.po  calligraactive.po  calligrafilters.po  crashhandler.po  desktop_calligra.po  flow.po  googledocs_plugin.po  karbon.po  kdgantt.po  kexi.po  kformdesigner_mapbrowser.po  kformdesigner_webbrowser.po  (+24 more)
messages/extragear-base/: bluedevil.po  desktop_extragear-base_kde-gtk-config.po  desktop_extragear-base_kwebkitpart.po  desktop_extragear-base_networkmanagement.po  desktop_extragear-base_wacomtablet.po  desktop_workspace_bluedevil.po  desktop_workspace_milou.po  desktop_workspace_plasma-nm.po  kde-gtk-config.po  kde-nm-connection-editor.po  knetworkmanager.po  kwebkitpart.po  libknetworkmanager.po  libplasmanetworkmanagement-editor.po  plasma_applet_milou_applet.po  plasma_applet_networkmanagement.po  plasma_applet_org.kde.networkmanagement.po  plasma_applet_tabletsettings.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement_l2tpui.po  plasmanetworkmanagement_openconnectui.po  plasmanetworkmanagement_openswanui.po  plasmanetworkmanagement_openvpnui.po  plasmanetworkmanagement_pptpui.po  plasmanetworkmanagement_strongswanui.po  plasmanetworkmanagement_vpncui.po  solidcontrolnm09.po  wacomtablet.po
messages/extragear-graphics/: SymbolEditor.po  desktop_extragear-graphics_kgraphviewer.po  desktop_extragear-graphics_kxstitch.po  desktop_extragear-graphics_symboleditor.po  kgraphviewer.appdata.po  kgraphviewer.metainfo.po  kgraphviewer.po  kxstitch.po
messages/extragear-kdevelop/: desktop_extragear-kdevelop_kdev-php-docs.po  desktop_extragear-kdevelop_kdev-php.po  desktop_extragear-kdevelop_kdev-python.po  desktop_extragear-kdevelop_kdevelop.po  desktop_extragear-kdevelop_kdevplatform.po  kdevappwizard.po  kdevclassbrowser.po  kdevcmake.po  kdevcmakebuilder.po  kdevcodeutils.po  kdevcontextbrowser.po  kdevcpp.po  kdevcustombuildsystem.po  kdevcustommake.po  kdevcvs.po  kdevdocumentswitcher.po  kdevdocumentview.po  kdevelop.po  kdevexecute.po  kdevexecuteplasmoid.po  kdevexecutescript.po  kdevexternalscript.po  kdevfilemanager.po  kdevfiletemplates.po  kdevformatters.po  kdevgdb.po  kdevgenericprojectmanager.po  kdevghprovider.po  kdevgit.po  kdevgrepview.po  kdevkdeprovider.po  kdevkonsole.po  kdevmakebuilder.po  kdevmanpage.po  kdevninja.po  kdevokteta.po  kdevopenwith.po  kdevpastebin.po  kdevpatchreview.po  kdevphp.po  (+19 more)
messages/extragear-libs/: libkgapi.po
messages/extragear-multimedia/: desktop_extragear-multimedia_k3b.po  desktop_extragear-multimedia_kamoso.po  desktop_extragear-multimedia_plasma-mediacenter.po  k3b.po  k3bsetup.po  kamoso.po  kio_videodvd.po  libk3b.po  libk3bdevice.po  plasma-mediacenter.po
messages/extragear-network/: desktop_extragear-network_konversation.po  desktop_extragear-network_ktorrent.po  desktop_extragear-network_ktp-accounts-kcm.po  desktop_extragear-network_ktp-approver.po  desktop_extragear-network_ktp-common-internals.po  desktop_extragear-network_ktp-contact-list.po  desktop_extragear-network_ktp-contact-runner.po  desktop_extragear-network_ktp-desktop-applets.po  desktop_extragear-network_ktp-kded-module.po  desktop_extragear-network_ktp-send-file.po  desktop_extragear-network_ktp-text-ui.po  desktop_extragear-network_smb4k.po  kcm_ktp_accounts.po  kcm_ktp_chat_appearance.po  kcm_ktp_chat_behavior.po  kcmtelepathyaccounts_plugin_butterfly.po  kcmtelepathyaccounts_plugin_gabble.po  kcmtelepathyaccounts_plugin_haze.po  kcmtelepathyaccounts_plugin_idle.po  kcmtelepathyaccounts_plugin_pintxo.po  kcmtelepathyaccounts_plugin_rakia.po  kcmtelepathyaccounts_plugin_salut.po  kcmtelepathyaccounts_plugin_sipe.po  kcmtelepathyaccounts_plugin_sunshine.po  kded_ktp_approver.po  kded_ktp_integration_module.po  kio_magnet.po  konversation.po  ktorrent.po  (+12 more)
(+2152 files in other folders)
