add_subdirectory( documentationnotfound )
add_subdirectory( fundamentals )
add_subdirectory( glossary )
add_subdirectory( kcontrol )
add_subdirectory( kdebugdialog )
add_subdirectory( kdesu )
add_subdirectory( khelpcenter )
add_subdirectory( kioslave )
add_subdirectory( knetattach )
add_subdirectory( nepomuk )
add_subdirectory( onlinehelp )
add_subdirectory( plasmapkg )
