add_subdirectory( kcontrol )
add_subdirectory( kdm )
add_subdirectory( kfontview )
add_subdirectory( kinfocenter )
add_subdirectory( klipper )
add_subdirectory( kmenuedit )
add_subdirectory( ksysguard )
add_subdirectory( plasma-desktop )
add_subdirectory( PolicyKit-kde )
add_subdirectory( systemsettings )
