add_subdirectory( checkXML )
add_subdirectory( kbuildsycoca4 )
add_subdirectory( kconfig_compiler )
add_subdirectory( kcookiejar4 )
add_subdirectory( kde4-config )
add_subdirectory( kded4 )
add_subdirectory( kdeinit4 )
add_subdirectory( kdeoptions )
add_subdirectory( kioslave )
add_subdirectory( kjs )
add_subdirectory( kjscmd )
add_subdirectory( kross )
add_subdirectory( makekdewidgets )
add_subdirectory( meinproc4 )
add_subdirectory( preparetips )
add_subdirectory( qtoptions )
add_subdirectory( sonnet )
