add_subdirectory( akonadi_archivemail_agent )
add_subdirectory( akonadi_notes_agent )
add_subdirectory( akonadi_sendlater_agent )
add_subdirectory( akregator )
add_subdirectory( blogilo )
add_subdirectory( contactthemeeditor )
add_subdirectory( headerthemeeditor )
add_subdirectory( importwizard )
add_subdirectory( kabcclient )
add_subdirectory( kalarm )
add_subdirectory( kioslave )
add_subdirectory( kjots )
add_subdirectory( kleopatra )
add_subdirectory( kmail )
add_subdirectory( kmailcvt )
add_subdirectory( knode )
add_subdirectory( knotes )
add_subdirectory( konsolekalendar )
add_subdirectory( kontact )
add_subdirectory( kontact-admin )
add_subdirectory( korganizer )
add_subdirectory( ktimetracker )
add_subdirectory( ktnef )
add_subdirectory( kwatchgnupg )
add_subdirectory( pimsettingexporter )
add_subdirectory( sieveeditor )
