add_subdirectory( autostart )
add_subdirectory( bell )
add_subdirectory( clock )
add_subdirectory( colors )
add_subdirectory( cursortheme )
add_subdirectory( desktop )
add_subdirectory( desktopthemedetails )
add_subdirectory( fontinst )
add_subdirectory( fonts )
add_subdirectory( joystick )
add_subdirectory( kcmaccess )
add_subdirectory( kcmsmserver )
add_subdirectory( kcmstyle )
add_subdirectory( keyboard )
add_subdirectory( keys )
add_subdirectory( khotkeys )
add_subdirectory( kwincompositing )
add_subdirectory( kwindecoration )
add_subdirectory( kwinscreenedges )
add_subdirectory( kwintabbox )
add_subdirectory( mouse )
add_subdirectory( paths )
add_subdirectory( powerdevil )
add_subdirectory( screensaver )
add_subdirectory( solid-actions )
add_subdirectory( splashscreen )
add_subdirectory( windowbehaviour )
add_subdirectory( windowspecific )
add_subdirectory( workspaceoptions )
